# loonaro-sandbox

./: .gitignore  README.md
agent/: Cargo.toml
agent/src/: commandline.rs  main.rs
lib/comms/: Cargo.toml
lib/comms/src/: lib.rs  tcp.rs  udp.rs
lib/etw/: Cargo.toml
lib/etw/src/: error.rs  helpers.rs  lib.rs  sid.rs
lib/etw/src/payload/: mod.rs  process.rs
lib/events/: Cargo.toml
lib/events/src/: error.rs  lib.rs  sid.rs
monitor/: Cargo.toml
monitor/src/: main.rs
runtime/: Cargo.toml
runtime/agent/: Cargo.toml
runtime/agent/src/: cache.rs  main.rs  proto_gen.rs  screenshots.rs  utils.rs
runtime/agent/src/etw_events/: dns.rs  file.rs  handle.rs  image_load.rs  ldap.rs  mod.rs  network.rs  pipe.rs  pnp.rs  powershell.rs  process.rs  registry.rs  thread.rs  wmi.rs
runtime/helpers/: Get-EtwProviderInfo.ps1
runtime/lib/comms/: Cargo.toml
runtime/lib/comms/src/: lib.rs
runtime/lib/models/: Cargo.toml  build.rs
runtime/lib/models/src/: lib.rs
runtime/lib/yara-scanner/: Cargo.toml
runtime/lib/yara-scanner/src/: artifacts.rs  config.rs  lib.rs  results.rs  rules.rs  scanner.rs
runtime/monitor/: Cargo.toml
runtime/monitor/src/: config.rs  fakenet_ng.rs  main.rs  processor.rs  session.rs
runtime/monitor/src/artifacts/: collector.rs  types.rs
runtime/monitor/src/artifacts/config/: file.rs  memory.rs  network.rs  registry.rs
runtime/monitor/src/moose/: ingest.rs  mod.rs
runtime/monitor/src/providers/: mod.rs  windows.rs
shared/proto/: sigma.proto
tools/fakenet-ng/: README.md
transport/: Cargo.toml
transport/src/: lib.rs  tcp.rs  udp.rs
