[workspace]
resolver = "2"
members = [
    "agent",
    "monitor",
    "lib/comms",

    "monitor-hook",
    "lib/yara-scanner", "lib/models",
]


[workspace.dependencies]
# Shared dependencies can be defined here if needed
tokio = { version = "1.48", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
im = "15.0.0"
