[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.34", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pemfile = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
one_collect = { git = "https://github.com/microsoft/one-collect" }
comms = { path = "../lib/comms" }
loonaro-models = { path = "../lib/models" }
prost = "0.13"

screenshots = "0.3"
image = "0.24"

bytes = "1.5"
futures = "0.3"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_Security", "Win32_Security_Authorization", "Win32_System_LibraryLoader", "Win32_System_ProcessStatus", "Win32_Storage_FileSystem"] }
sha1 = "0.10"
base64 = "0.22"
md5 = "0.7"
