[package]
name = "monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.17"
comms = { path = "../lib/comms" }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "fs"] }
minicbor = "2.1.1"
anyhow = "1.0.99"
comfy-table = { version = "7.1.1", features = ["tty"] }
terminal_size = "0.4.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rcgen = "0.13"
rustls-pemfile = "2.1"
clap = { version = "4.5.21", features = ["derive"] }
bytes = "1.0"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"


# Local crates
# Local crates
yara-scanner = { path = "../lib/yara-scanner" }
loonaro-models = { path = "../lib/models" }
prost = "0.13"
prost-types = "0.13"

# [build-dependencies]
# prost-build = "0.13"

