[package]
name = "comms"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5"
tokio = { version = "1.34", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
minicbor = { version = "0.20", features = ["derive", "std"] } # Keeping for now if transiently needed, but likely removing
prost = "0.13"
loonaro-models = { path = "../models" }